# pdfmerger

backend/: pyproject.toml
backend/app/: main.py
frontend/: package.json
frontend/src/app/: app.css  app.html  app.ts
